<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/greenButton"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="40dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:backgroundTint="@color/green_button_colors"
        app:layout_constraintBottom_toTopOf="@+id/yellowButton"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/redButton"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="40dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:backgroundTint="@color/red_button_colors"
        app:layout_constraintBottom_toTopOf="@+id/blueButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/yellowButton"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="130dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:backgroundTint="@color/yellow_button_colors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/blueButton"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="130dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:backgroundTint="@color/blue_button_colors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/levelText"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="30dp"
        android:text="@string/level_text"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/level"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack" />

    <TextView
        android:id="@+id/level"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="100dp"
        android:text="@string/level"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/levelText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/levelText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/topScoreText"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:text="@string/top_score_text"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/greenButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levelText"
        app:layout_constraintVertical_bias="0.105" />

    <TextView
        android:id="@+id/topScoreValue"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="100dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/topScoreText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topScoreText"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>